[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-champs"
version = "1.0.0"
description = "League of Legends Champions & Splash Arts — no API key required"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Johnny Silverhand" },
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]
keywords = ["league-of-legends", "riot-games", "splash-art", "data-dragon", "lol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://pypi.org/project/lol-champs/"
Source = "https://pypi.org/project/lol-champs/"

[tool.setuptools.packages.find]
where = ["src"]
